@@ -303,6 +303,8 @@ void setFileTimestamps(Provider<RegularFile> archive, Instant instant) {
  *                                                                            *
  *****************************************************************************/
 
+loadProperties("$projectDir/build.properties")
+
 // If the ../rt-closed directory exists, then we are doing a closed build.
 // In this case, build and property files will be read from
 // ../rt-closed/closed-build.gradle and ../rt-closed/closed-properties.gradle
@@ -341,6 +343,9 @@ ext.MAVEN_GROUP_ID = "org.openjfx"
 // Enable native access from modules with native code
 ext.enableNativeGraphics='--enable-native-access=javafx.graphics'
 ext.enableNativeAll='--enable-native-access=javafx.graphics,javafx.media,javafx.web'
+
+// FIXME: Remove this when JDK-8334137 is fixed
+ext.allowSunMiscUnsafe = '--sun-misc-unsafe-memory-access=allow'
 
 // Verify that the architecture & OS are supported configurations. Note that
 // at present building on PI is not supported, but we would only need to make
@@ -393,14 +398,12 @@ defineProperty("JAVA", cygpathExe("$JDK_HOME/bin/java"))
 defineProperty("JAVAC", cygpathExe("$JDK_HOME/bin/javac"))
 defineProperty("JAVADOC", cygpathExe("$JDK_HOME/bin/javadoc"))
 defineProperty("JMOD", cygpathExe("$JDK_HOME/bin/jmod"))
-defineProperty("JDK_DOCS", "https://docs.oracle.com/en/java/javase/21/docs/api/")
+defineProperty("JDK_DOCS", "https://docs.oracle.com/en/java/javase/${jdkDocsVersion}/docs/api/")
 defineProperty("JDK_JMODS", cygpath(System.getenv("JDK_JMODS")) ?: cygpath(System.getenv("JDK_HOME") + "/jmods"))
 
 defineProperty("libAVRepositoryURL", "https://github.com/libav/libav/archive")
 defineProperty("FFmpegRepositoryURL", "https://www.ffmpeg.org/releases/")
 defineProperty("icuRepositoryURL", "https://github.com/unicode-org/icu/releases/")
-
-loadProperties("$projectDir/build.properties")
 
 def supplementalPreBuildFile = file("$closedDir/closed-pre-build.gradle");
 def supplementalBuildFile = file("$closedDir/closed-build.gradle");
@@ -1183,6 +1186,11 @@ void writeArgsFile(boolean isCompile, File dest, List<String> libpath, List<Stri
         if (!isCompile) {
             dest << enableNativeAll
             dest << "\n"
+            // FIXME: Remove this when JDK-8334137 is fixed
+            if (jdk24OrLater) {
+                dest << allowSunMiscUnsafe
+                dest << "\n"
+            }
         }
     }
 }
@@ -2680,6 +2688,10 @@ project(":graphics") {
     test {
         def cssDir = file("${TEST_SDK_PATH}/shims/${moduleName}/javafx")
         jvmArgs enableNativeGraphics
+        // FIXME: Remove this when JDK-8334137 is fixed
+        if (jdk24OrLater) {
+            jvmArgs allowSunMiscUnsafe
+        }
         jvmArgs "-Djavafx.toolkit=test.com.sun.javafx.pgstub.StubToolkit",
             "-DCSS_META_DATA_TEST_DIR=$cssDir"
         enableAssertions = true
@@ -2769,6 +2781,10 @@ project(":controls") {
     test {
         def cssDir = file("${TEST_SDK_PATH}/shims/${moduleName}/javafx")
         jvmArgs enableNativeGraphics
+        // FIXME: Remove this when JDK-8334137 is fixed
+        if (jdk24OrLater) {
+            jvmArgs allowSunMiscUnsafe
+        }
         jvmArgs "-Djavafx.toolkit=test.com.sun.javafx.pgstub.StubToolkit",
             "-DCSS_META_DATA_TEST_DIR=$cssDir"
     }
@@ -2876,6 +2892,11 @@ project(":swing") {
         enabled = IS_FULL_TEST && IS_AWT_TEST
 
         jvmArgs enableNativeGraphics
+
+        // FIXME: Remove this when JDK-8334137 is fixed
+        if (jdk24OrLater) {
+            jvmArgs allowSunMiscUnsafe
+        }
     }
 
     if (COMPILE_SWING) {
@@ -2943,6 +2964,11 @@ project(":swt") {
 
         jvmArgs enableNativeGraphics
 
+        // FIXME: Remove this when JDK-8334137 is fixed
+        if (jdk24OrLater) {
+            jvmArgs allowSunMiscUnsafe
+        }
+
         if (IS_MAC) {
             enabled = false
             logger.info("SWT tests are disabled on MAC, because Gradle test runner does not handle -XstartOnFirstThread properly (https://issues.gradle.org/browse/GRADLE-3290).")
@@ -2992,6 +3018,10 @@ project(":fxml") {
         // tracker and this attempts to fire up the toolkit and this looks for native libraries and fails,
         // we have to use the stub toolkit for now.
         jvmArgs enableNativeGraphics
+        // FIXME: Remove this when JDK-8334137 is fixed
+        if (jdk24OrLater) {
+            jvmArgs allowSunMiscUnsafe
+        }
         jvmArgs "-Djavafx.toolkit=test.com.sun.javafx.pgstub.StubToolkit"
         // FIXME: change this to also allow JDK 9 boot jdk
         classpath += files("$JDK_HOME/jre/lib/ext/nashorn.jar")
@@ -3734,6 +3764,11 @@ project(":web") {
         // enable native access for all modules with native code
         jvmArgs enableNativeAll
 
+        // FIXME: Remove this when JDK-8334137 is fixed
+        if (jdk24OrLater) {
+            jvmArgs allowSunMiscUnsafe
+        }
+
         // Run web tests in headless mode
         systemProperty 'glass.platform', 'Monocle'
         systemProperty 'monocle.platform', 'Headless'
@@ -4120,6 +4155,11 @@ project(":systemTests") {
 
         // enable native access for all modules with native code
         jvmArgs enableNativeAll
+
+        // FIXME: Remove this when JDK-8334137 is fixed
+        if (jdk24OrLater) {
+            jvmArgs allowSunMiscUnsafe
+        }
 
         // Parse testPatchModuleArgs looking for "*module-path".
         // Save path if found so we can pass it to the module launcher tests
